Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.15.2, 6.0.0
-
Fix Version/s: 6.1.0 Alpha
-
Component/s: Documentation, Quick: Core Declarative QML
-
Labels:None
-
Platform/s:
-
Commits:a87621ae156524836dac23275d9076dc65540ba4 (qt/qtdeclarative/dev)
Description
In the property documentation of WheelHandler.acceptedDevices it is mentioned that the default value is PointerDevice.AllDevices, but that's not right.
In the detailed documentation it says that
WheelHandler handles only a rotating mouse wheel by default.
I lookup in the source code (qquickwheelhandler.cpp) and the default value of acceptedDevices is set in the constructor to PointerDevice.Mouse.
Can someone correct this?
Thanks.