doc: Override the docs for the WheelHandler::acceptedDevices property

The existing docs were inherited from
PointerDeviceHandler::acceptedDevices and contained the statement
"By default, this property is set to AllDevices", which is true for many
handlers, but not WheelHandler.

Fixes: QTBUG-89861
Change-Id: I5227037ffbecedc8fdd19750e60c421383ec5581
Reviewed-by: Topi Reiniö <topi.reinio@qt.io>